--- a/files/usr/lib/lua/luci/view/contribute.htm
+++ b/files/usr/lib/lua/luci/view/contribute.htm
@@ -1,13 +1,13 @@
 <%+header%>
 <h2>♥ Contribute</h2>
 
-<div style="margin:20px 0;">
+<div style="margin:25px 0;">
   <p>Hello There!!!<br/>
   Terima Kasih Sudah Menjadi Bagian Dari Project Yang Kita Buat Bersama.:</p>
 </div>
 
 <div style="text-align:center; margin:20px 0;">
-  <a href="https://saweria.co/NAMA_KAMU" target="_blank" style="font-size:18px; font-weight:bold; text-decoration:none; color:#007bff;">
+  <a href="https://saweria.co/SOGEKING" target="_blank" style="font-size:18px; font-weight:bold; text-decoration:none; color:#007bff;">
     🌟 Link via Saweria
   </a>
 </div>
