--- a/files/usr/lib/lua/luci/view/contribute.htm
+++ b/files/usr/lib/lua/luci/view/contribute.htm
@@ -1,14 +1,15 @@
 <%+header%>
 <h2>♥ Contribute</h2>
 
-<div style="margin:25px 0;">
+<div style="margin:20px 0; font-weight:bold;">
   <p>Hello There!!!<br/>
-  Terima Kasih Sudah Menjadi Bagian Dari Project Yang Kita Buat Bersama.:</p>
+  Terima Kasih Sudah Menjadi Bagian Dari Project Yang Kita Buat Bersama.</p>
 </div>
 
 <div style="text-align:center; margin:20px 0;">
-  <a href="https://saweria.co/SOGEKING" target="_blank" style="font-size:20px; font-weight:bold; text-decoration:none; color:#007bff;">
-    🌟 Link via Saweria
+  <img src="/luci-static/resources/contribute_saweria.png"> <a href="https://saweria.co/SOGEKING" target="_blank" style="max-width:250px; border:1px solid border-radius:8px;"/>
+  <p style="margin-top:10px;"><a href="https://saweria.co/SOGEKING" target="_blank" style="font-size:18px; font-weight:bold; text-decoration:none; color:#007bff;">
+    Link via Saweria
   </a>
 </div>
 
