--- a/files/usr/lib/lua/luci/view/contribute.htm
+++ b/files/usr/lib/lua/luci/view/contribute.htm
@@ -7,10 +7,14 @@
 </div>
 
 <div style="text-align:center; margin:20px 0;">
-  <img src="/luci-static/resources/contribute_saweria.png"> <a href="https://saweria.co/SOGEKING" target="_blank" style="max-width:250px; border:1px solid border-radius:8px;"/>
-  <p style="margin-top:10px;"><a href="https://saweria.co/SOGEKING" target="_blank" style="font-size:18px; font-weight:bold; text-decoration:none; color:#007bff;">
-    Link via Saweria
+  <a href="https://saweria.co/SOGEKING" target="_blank" style="display:inline-block;">
+    <img src="/luci-static/resources/contribute_saweria.png" style="max-width:250px; border:1px solid #ddd; padding:5px; border-radius:8px;"/>
   </a>
+  <p style="margin-top:10px;">
+    <a href="https://saweria.co/SOGEKING" target="_blank" style="font-size:18px; font-weight:bold; text-decoration:none; color:#007bff;">
+      Link via Saweria
+    </a>
+  </p>
 </div>
 
 <div style="text-align:center; margin-top:30px;">
