--- a/files/usr/lib/lua/luci/view/themes/argon/footer.htm
+++ b/files/usr/lib/lua/luci/view/themes/argon/footer.htm
@@ -20,8 +20,7 @@
 </div>
 <footer class="mobile-hide">
 	<div>
-		<a class="luci-link" href="https://github.com/openwrt/luci" target="_blank">Powered by <%= ver.luciname %> (<%= ver.luciversion %>)</a> /
-						<a href="https://github.com/jerrykuku/luci-theme-argon" target="_blank">ArgonTheme v2.3.2</a> /
+		<a class="luci-link" href="https://t.me/OnProgressss" target="_blank">DreamOs</a> - >Powered by <%= ver.luciname %></a> /
 						<%= ver.distversion %>
 		<ul class="breadcrumb pull-right" id="modemenu" style="display:none"></ul>
 	</div>
