--- a/files/usr/lib/lua/luci/view/indowrt/page.htm
+++ b/files/usr/lib/lua/luci/view/indowrt/page.htm
@@ -14,12 +14,12 @@
 
 <form method="post">
     <div class="cbi-section">
-        <label for="ttl_value">Input Time To Live:</label>
+        <label for="ttl_value">Set Time To Live:</label>
         <input type="number" id="ttl_value" name="ttl_value" min="1" max="255" value="<%= ttl_value %>" required>
     </div>
     <div class="cbi-section">
         <button class="cbi-button cbi-button-apply" type="submit">
-            Set Value
+            Apply
         </button>
     </div>
 </form>
